Revert "Update Files to Read and Write Timestamp"
This reverts commit a127b51734ab07c19b127fd60da69b67671a60d5.